--- a/Views/Shared/_Pagination.cshtml
+++ b/Views/Shared/_Pagination.cshtml
@@ -1,50 +1,25 @@
-@{
-    var tuple = (dynamic)Model;
-    int currentPage = tuple.Item1;
-    int totalPages = tuple.Item2;
+@model EmployeeManagementSystem.ViewModels.EmployeeListViewModel
 
-    var query = Context.Request.Query;
-    var currentFilter = query.ContainsKey("searchString") ? query["searchString"].ToString() : "";
-    var currentSort = query.ContainsKey("sortOrder") ? query["sortOrder"].ToString() : "";
-}
+<nav aria-label="Page navigation" class="mt-3">
+    <ul class="pagination justify-content-end">
+        @{
+            var prevDisabled = Model.CurrentPage <= 1 ? "disabled" : "";
+            var nextDisabled = Model.CurrentPage >= Model.TotalPages ? "disabled" : "";
+        }
+        <li class="page-item @prevDisabled">
+            <a class="page-link" asp-action="Index" asp-route-page="@(Model.CurrentPage - 1)" aria-label="Previous">Previous</a>
+        </li>
 
-@if (totalPages > 1)
-{
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            <li class="page-item @(currentPage == 1 ? "disabled" : "")">
-                <a class="page-link"
-                   asp-action="Index"
-                   asp-route-page="@(currentPage - 1)"
-                   asp-route-searchString="@currentFilter"
-                   asp-route-sortOrder="@currentSort"
-                   aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
+        @for (int i = 1; i <= Model.TotalPages; i++)
+        {
+            var active = i == Model.CurrentPage ? "active" : "";
+            <li class="page-item @active">
+                <a class="page-link" asp-action="Index" asp-route-page="@i">@i</a>
             </li>
+        }
 
-            @for (int p = 1; p <= totalPages; p++)
-            {
-                var active = p == currentPage ? "active" : "";
-                <li class="page-item @active">
-                    <a class="page-link"
-                       asp-action="Index"
-                       asp-route-page="@p"
-                       asp-route-searchString="@currentFilter"
-                       asp-route-sortOrder="@currentSort">@p</a>
-                </li>
-            }
-
-            <li class="page-item @(currentPage == totalPages ? "disabled" : "")">
-                <a class="page-link"
-                   asp-action="Index"
-                   asp-route-page="@(currentPage + 1)"
-                   asp-route-searchString="@currentFilter"
-                   asp-route-sortOrder="@currentSort"
-                   aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-}
+        <li class="page-item @nextDisabled">
+            <a class="page-link" asp-action="Index" asp-route-page="@(Model.CurrentPage + 1)" aria-label="Next">Next</a>
+        </li>
+    </ul>
+</nav>
